src/ui/snapshots/rigor__ui__tests__all_stacked_100x24.snap
---
source: src/ui/tests.rs
expression: "render(&mut a, 100, 24)"
---
 rigor │ acme/widget  ⎇ chore/release-notes                                                @octocat
 Ready 1   Mine 2   Review 1   Blocked 1   All 3   Worktrees 5             ⌫ 1 removable   ↕ recent
───────────────────────────────────────────━━━━━────────────────────────────────────────────────────
▎#4846  ✗ 1/3     ⌂ Give the read path a retry budget                            octocat         3m
 #4840  ✓ 3     ✔ ⌂ Move the palette onto colour tokens                          octocat         2h
 #4801  ◐ 2/3   ⚠   draft · Treat a filtered empty result as unknown             agent-bot       3d







────────────────────────────────────────────────────────────────────────────────────────────────────
 #4846 Give the read path a retry budget
 octocat · 3m ago · +220 −24 · 6 files · 2 comments
  review    review required
  merge     no conflicts  → main
  labels    parser, backend
  branch    retry-budget
  worktree  widget-wt/retry-budget  ● 3 uncommitted  commit 3m ago
  checks    1 passed · 1 failing · 1 running
            ✗ e2e (web)                                                                       4m03s
 1–6 view   o open   c checks   y copy   / filter   s sort   r refresh              ? help   q quit
