src/ui/snapshots/rigor__ui__tests__narrow_60x16.snap
---
source: src/ui/tests.rs
expression: "render(&mut a, 60, 16)"
---
 rigor │ acme/widget  ⎇ chore/release-notes        @octocat
 Ready 1   Mine 2   Review 1   Blocked 1   All 3   Worktrees
───────────────────────────────────────────━━━━━────────────
▎#4846  ✗ 1/3     ⌂ Give the read path a retry budget
 #4840  ✓ 3     ✔ ⌂ Move the palette onto color tokens
 #4801  ◐ 2/3   ⚠   draft · Treat a filtered empty result …



────────────────────────────────────────────────────────────
 #4846 Give the read path a retry budget
 octocat · 3m ago · +220 −24 · 6 files · 2 comments
  review    review required
  merge     no conflicts  → main
  labels    parser, backend
 1–6 view   o open   c checks   y copy      ? help   q quit
