src/ui/snapshots/rigor__ui__tests__sync_failed_120x10.snap
---
source: src/ui/tests.rs
expression: "render(&mut a, 120, 10)"
---
 rigor │ acme/widget  ⎇ chore/release-notes                                      @octocat   ● sync failed · retry in 3m
 Ready 1   Mine 2   Review 1   Blocked 1   All 3   Worktrees 5                                 ⌫ 1 removable   ↕ recent
───────────────────────────────────────────━━━━━────────────────────────────────────────────────────────────────────────
▎#4846  ✗ 1/3     ⌂ Give the read path a retry budget                                                octocat         3m
 #4840  ✓ 3     ✔ ⌂ Move the palette onto color tokens                                               octocat         2h
 #4801  ◐ 2/3   ⚠   draft · Treat a filtered empty result as unknown                                 agent-bot       3d

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

 ✗ gh api graphql: timed out after 45s
